Hold a divisor to parity rather than dropping it (#709 round 1)
Excluding the divisor outright left a chosen six with no rival the
margin gate had not already decided, so every admitted six reported the
ceiling -- including one carried by its own three, which is the reading
DIVIDED exists to adjudicate and the one a user most wants told to check.
A divisor may not be asked to be beaten by the margin, since the
statistic scores it as strongly as the period casting it; it may still
be asked not to outscore it.

Round 1 proposed instead counting the divisor as a rival wherever it
outscores the chosen length. That puts a step of 0.3 at exact equality,
which is the case the class calls the exact shadow, and reports a six at
the DIVIDED boundary below the three just under it. Parity is continuous
at both.